--- a/public/src/index.html
+++ b/public/src/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <img class="hero__logo" src="./images/logo_escola.png" alt="Logo escola">
             <p class="hero__text">
-                <!-- As eleições ocorrem em --> <span id="contador" ></span> 
+                As eleições ocorrem em <span id="contador" ></span>
             </p>
 
             <div class="infos-bar infos-bar--informacao" >
